# claude-goblin-mod

./: .claude.251014  .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  update_machine_name.py
docs/: INSTALLATION.md  MULTI_PC_IMPLEMENTATION_PLAN.md  MULTI_PLATFORM_SYNC.md  MULTI_PROVIDER_ARCHITECTURE.md  PHASE1_SUMMARY.md  PYPI_PUBLISHING.md  PYPI_SUMMARY.md  QUICK_PUBLISH.md  SECURITY_REMEDIATION.md  SECURITY_SUMMARY.md  SECURITY_USAGE.md  commands.md
docs/gifs/: 00-setup.tape  00-vscode-integration.tape  01-usage-mode.tape  02-weekly-mode.tape  03-weekly-daily-detail.tape  04-weekly-message-detail.tape  05-monthly-mode.tape  06-yearly-mode.tape  07-heatmap-mode.tape  08-devices-mode.tape  09-settings-menu.tape  09-settings-mode.tape  README.md  generate-all.sh
docs/versions/: 0.1.0.md  0.1.1.md  0.1.2.md  0.1.3.md  1.0.0.md  1.0.1.md  1.0.3.md  1.2.1.md  1.2.2.md  1.2.3.md  1.2.4.md
scripts/: README.md  build_monthly_aggregates.py  migrate_to_onedrive.sh  migrate_to_pc_specific_dbs.py
src/: cli.py
src/aggregation/: daily_stats.py  summary.py  usage_limits.py
src/claude_goblin_usage/: cli.py
src/claude_goblin_usage/aggregation/: daily_stats.py  usage_limits.py
src/claude_goblin_usage/commands/: delete_usage.py  export.py  help.py  restore_backup.py  stats.py  status_bar.py  update_usage.py  usage.py
src/claude_goblin_usage/config/: settings.py
src/claude_goblin_usage/data/: jsonl_parser.py
src/claude_goblin_usage/hooks/: audio.py  manager.py  png.py  usage.py
src/claude_goblin_usage/storage/: __init__.py  snapshot_db.py
src/claude_goblin_usage/visualization/: activity_graph.py  dashboard.py  export.py  usage_bars.py
src/commands/: __init__.py  config_cmd.py  delete_usage.py  export.py  heatmap.py  help.py  limits.py  reset_db.py  restore_backup.py  settings.py  setup_wizard.py  stats.py  status_bar.py  update_usage.py  usage.py
src/config/: __init__.py  defaults.py  settings.py  user_config.py
src/data/: jsonl_parser.py
src/hooks/: audio.py  audio_tts.py  manager.py  png.py  usage.py
src/hooks/scripts/: audio_tts_hook.sh
src/models/: pricing.py  usage_record.py
src/storage/: machines_db.py  snapshot_db.py
src/utils/: _system.py  backup.py  file_watcher.py  security.py  text_analysis.py  timezone.py
src/visualization/: activity_graph.py  dashboard.py  device_stats.py  export.py  usage_bars.py
test_env/: pyvenv.cfg
