[project]
name = "claude-goblin-mod"
version = "0.2.0"
description = "Enhanced fork of Claude Goblin with multi-PC support via OneDrive synchronization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name"},  # TODO: Replace with your name
    {name = "Kurt Buhler", email = "original-author@example.com"}  # Original author credit
]
keywords = ["claude", "claude-code", "usage", "analytics", "tui", "dashboard", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.7.0",
    "typer>=0.9.0",
    "watchdog>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR-USERNAME/claude-goblin-mod"  # TODO: Replace with your GitHub username
Repository = "https://github.com/YOUR-USERNAME/claude-goblin-mod"  # TODO: Replace with your GitHub username
Issues = "https://github.com/YOUR-USERNAME/claude-goblin-mod/issues"  # TODO: Replace with your GitHub username
"Original Project" = "https://github.com/data-goblin/claude-goblin"

[project.scripts]
claude-goblin = "src.cli:main"
ccu = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-faker>=2.0.0",
    "mypy>=1.7.0",
]
security = [
    "pip-audit>=2.6.0",
    "safety>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
